[package]
name = "TimeTracker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
sysinfo = { version = "0.32.0", features = ["windows"] }

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
codegen-units = 16
panic = "unwind"
incremental = true
strip = "none"